# deep_learning_operations

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build_gtest.yaml
gtest/: CMakeLists.txt  conv2d_test.cpp  quantization_test.cpp  tensor_test.cpp
legacy/: dense_test.cpp
legacy/dense/: dense.hpp
operation/conv/: conv2d.hpp
operation/quantization/: quantization.hpp
src/: CMakeLists.txt  fastinference.cpp  fastop.cpp  main.cpp
src/operation/conv/: conv2d.hpp
src/operation/dense/: dense.hpp
src/operation/quantization/: dequantization.hpp  quantization.hpp
src/tensor/: quantized_tensor.hpp  tensor.hpp
